--- a/src/component/Home/Home.css
+++ b/src/component/Home/Home.css
@@ -1,33 +1,26 @@
-body {
-  background: rgb(248, 242, 242);
+header {
+  position: absolute;
+  width: auto;
+  justify-content: center;
 }
 .home_banner {
-  position: relative;
-  z-index: 100;
+  width: 100%;
+  height: 40rem;
 }
 video {
   width: 100%;
   height: 40rem;
   object-fit: cover;
 }
-header {
+.home_banner_content {
   position: absolute;
-  width: auto;
+  width: 100%;
+  height: 40rem;
+  top: 5rem;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
+  color: white;
+  padding-left: 4rem;
 }
-
-/* .home_banner_content {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-  
-    display: flex;
-    
-    justify-content: center;
-    align-items: center;
-    color: white;
-  } */
-/* .header {
-    position: absolute;
-    justify-content: first baseline;
-  } */
