--- a/src/component/layout/Header/Header.css
+++ b/src/component/layout/Header/Header.css
@@ -1,11 +1,11 @@
 /* Desctop Design*/
 
-* {
+/* * {
   padding: 0;
   margin: 0;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   background: rgb(248, 242, 242);
-}
+} */
 
 .header {
   padding: 0 1rem;
