--- a/src/component/Home/Home.css
+++ b/src/component/Home/Home.css
@@ -1,27 +1,33 @@
 header {
-  position: absolute;
+  /* position: absolute; */
+  /* position: fixed; */
+  position: static;
+  top: 0;
   width: auto;
   justify-content: center;
 }
 
-main {
+.main {
   display: flex;
+  flex-direction: column;
   flex: 1;
   align-items: center;
   justify-content: center;
   gap: 2rem;
   position: relative;
-  flex-direction: row;
+  /* flex-direction: row; */
   /* background-color: var(--background-color); */
-  margin: 1.5rem auto 0;
-  padding: 1rem;
+  /* margin: 1.5rem auto 0; */
+  /* padding: 1rem; */
   border-radius: 18px;
-  width: min(90%, 50rem);
-  min-height: 30rem;
-  box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.8);
+  /* width: min(90%, 50rem); */
+  /* max-width: 100%; */
+  /* min-height: 30rem; */
+  /* box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.8); */
   margin-bottom: 1rem;
 }
 .home_banner {
+  position: relative;
   width: 100%;
   height: 40rem;
 }
@@ -34,7 +40,7 @@ video {
   position: absolute;
   width: 100%;
   height: 40rem;
-  top: 5rem;
+  top: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -42,25 +48,47 @@ video {
   color: white;
   padding-left: 4rem;
 }
+
 .cardsContainer {
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
+  /* grid-template-columns: repeat(3, 1fr); */
+  grid-template-columns: var(
+    --breakpoint-grid_column-template,
+    repeat(var(--breakpoint-grid_columns, 1), minmax(0, 1fr))
+  );
+  --breakpoint-grid_columns: 3;
+  grid-gap: 2rem;
   justify-items: center;
   margin-top: 5rem;
+  padding-inline: var(--explore_padding-inline);
+  --explore_padding-inline: 3rem;
 }
 .find_pet_button button {
-  background-color: tomato;
+  background-color: var(--color-btn-tomato);
   border: 2px solid rgb(206, 92, 72);
   border-radius: 18px;
 }
 
 /* Responsive Design Mobile */
-@media screen and (max-width: 330px) {
+@media screen and (max-width: 900px) {
+  .cardsContainer {
+    --breakpoint-grid_columns: 2;
+  }
+}
+
+/* Responsive Design Mobile */
+@media screen and (max-width: 600px) {
   /* body {
     font-size: 0.7rem;
   } */
+  .home_banner_content {
+    height: 5rem;
+  }
   video {
-    display: block;
+    display: none;
+  }
+  .cardsContainer {
+    --breakpoint-grid_columns: 1;
   }
 }
