--- a/src/component/Home/PetCard.css
+++ b/src/component/Home/PetCard.css
@@ -1,12 +1,23 @@
+/* .card,
+.card-header,
+.card-body,
+.card-footer {
+  border-radius: 0px !important;
+  border: none;
+  background-color: transparent;
+} */
+/* .card,
+.card-header,
+.card-footer { */
 .card {
   display: flex;
   flex-direction: column;
-  background-color: transparent;
+  background-color: red;
   border: 2px solid green;
   border: none;
   border-radius: 10px;
   width: 20rem;
-  /* height: 35rem; */
+  height: 10rem;
   justify-content: space-between;
   /* background-color: transparent;
   border: none; */
@@ -19,6 +30,7 @@
   display: flex;
   flex-direction: column;
   background-color: transparent;
+  border: none;
 }
 /*.petCard a {
   width: 100%;
