--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,54 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap'); */
 
 /*Desctop Design*/
-*,
+/* *,
 *::after,
 *::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-:root {
-  /* Colors  */
-  --color-background: #f7f2f2;
-  /* rgb(248, 242, 242); */
+} */
+/* :root { */
+/* Colors  */
+/* --color-background: #f7f2f2;
   --color-txt: #2d3748;
-  --color-btn-tomato: rgb(249, 225, 221);
-  --color-bg-footer: black;
-  /*--color-brand: #39191e;
+  --color-btn-tomato: tomato;
+  --color-bg-footer: blue; */
+/*--color-brand: #39191e;
   --color-notes: hsl(46, 84%, 90%);
   --color-add-notes: hsl(342, 100%, 86%); */
-}
-body {
-  /* box-sizing: border-box; */
-  background: var(--color-background);
-  color: var(--color-txt);
-  /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
-  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-  font-family: 'Poppins', sans-serif;
-  font-size: 100%;
-  /* width: 100%; */
-}
+/* }
+body { */
+/* box-sizing: border-box; */
+/* background: var(--color-background);
+  color: var(--color-txt); */
+/* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
+/* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+/* font-family: 'Poppins', sans-serif;
+  font-size: 100%; */
+/* width: 100%; */
+/* } */
 
-a {
+/* a {
   text-decoration: none;
   color: #2d3748;
-  background-color: transparent;
-  /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
-}
+  background-color: transparent; */
+/* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
+/* } */
 
 /* Responsive Design Mobile */
-@media screen and (max-width: 900px) {
-  body {
+/* @media screen and (max-width: 900px) { */
+/* body {
     font-size: 70%;
   }
-}
+} */
 
 /* Responsive Design Mobile */
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
   body {
     font-size: 60%;
   }
-}
+} */
 /* html { */
 /* // This defines what 1rem is
   font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5% */
@@ -91,23 +90,4 @@ ORDER: Base + typography > general layout + grid > page layout > components
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-} */
-
-/* Desctop Design*/
-
-/* Responsive Design Mobile */
-/* @media screen and (max-width: 768px) { */
-/* body {
-    font-size: 1rem;
-  }
-} */
-
-/* Responsive Design Mobile */
-/* @media screen and (max-width: 330px) {
-  body {
-    font-size: 0.7rem;
-  }
-  video {
-    display: none;
-  }
 } */
