--- a/src/component/layout/Footer/Footer.css
+++ b/src/component/layout/Footer/Footer.css
@@ -1,21 +1,22 @@
 .footer {
-    height: 4rem;
+  height: 4rem;
+  bottom: 0;
 }
 
 .footer-links {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  bottom: 0;
 }
 
 .footer-link a {
-    color: #000000;
-    text-decoration: none;
+  color: #000000;
+  text-decoration: none;
 }
 
 .footer-copyright-text {
-    color: rgb(110, 108, 108);
+  color: rgb(110, 108, 108);
 }
