Remove margin Pets Container

--- a/src/component/Pet/Pets.module.css
+++ b/src/component/Pet/Pets.module.css
@@ -55,9 +55,9 @@ video {
   flex-direction: row;
   width: 100%;
 }
-.cardsContainer {
+/* .cardsContainer {
   margin-left: 2rem;
-}
+} */
 .grid_item {
   display: flex;
   align-items: center;
