--- a/src/component/User/Profile.module.css
+++ b/src/component/User/Profile.module.css
@@ -39,9 +39,19 @@
   min-width: 38rem;
   padding-top: 10%;
   padding-bottom: 10%;
-  margin: 0 auto;
-  position: flex;
-  left: 0;
-  right: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   overflow: hidden;
+}
+
+.profile-heading-wrapper {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.profile-heading {
+  font-weight: 400;
 }
